renkko/media/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
spec:
  selector:
    app: kavita
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
