renkko/media/kavita/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "paper.senk0.com"
  rules:
    - backendRefs:
        - name: kavita
          port: 5000
